@@ -3,7 +3,7 @@
 /* NoticeStart
 
 OWF TSTool AWS Plugin
-Copyright (C) 2022-2024 Open Water Foundation
+Copyright (C) 2022-2025 Open Water Foundation
 
 OWF TSTool AWS Plugin is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -473,7 +473,7 @@ implements CommandDiscoverable, FileGenerator, ObjectListProvider {
           	}
            	PropList requestParams = new PropList ( "" );
            	requestParams.setUsingObject ( "PropertyName", listDistributionsCountProperty );
-           	requestParams.setUsingObject ( "PropertyValue", new Integer(distributionCount) );
+           	requestParams.setUsingObject ( "PropertyValue", Integer.valueOf(distributionCount) );
            	try {
                	processor.processRequest( "SetProperty", requestParams);
            	}
@@ -561,7 +561,7 @@ implements CommandDiscoverable, FileGenerator, ObjectListProvider {
           	}
            	PropList requestParams = new PropList ( "" );
            	requestParams.setUsingObject ( "PropertyName", listInvalidationsCountProperty );
-           	requestParams.setUsingObject ( "PropertyValue", new Integer(invalidationCount) );
+           	requestParams.setUsingObject ( "PropertyValue", Integer.valueOf(invalidationCount) );
            	try {
                	processor.processRequest( "SetProperty", requestParams);
            	}
@@ -674,7 +674,7 @@ implements CommandDiscoverable, FileGenerator, ObjectListProvider {
 
     	CommandProcessor processor = getCommandProcessor();
 		CommandStatus status = getCommandStatus();
-    	Boolean clearStatus = new Boolean(true); // Default.
+    	Boolean clearStatus = Boolean.TRUE; // Default.
     	try {
     		Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     		if ( o != null ) {
