@@ -3,7 +3,7 @@
 /* NoticeStart
 
 OWF TSTool AWS Plugin
-Copyright (C) 2022-2024 Open Water Foundation
+Copyright (C) 2022-2025 Open Water Foundation
 
 OWF TSTool AWS Plugin is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -1201,7 +1201,7 @@ implements CommandDiscoverable, FileGenerator, ObjectListProvider
 		if ( (copyObjectCountProperty != null) && !copyObjectCountProperty.equals("") ) {
 			PropList requestParams = new PropList ( "" );
 			requestParams.setUsingObject ( "PropertyName", copyObjectCountProperty );
-			requestParams.setUsingObject ( "PropertyValue", new Integer(copyCount) );
+			requestParams.setUsingObject ( "PropertyValue", Integer.valueOf(copyCount) );
 			try {
 				processor.processRequest( "SetProperty", requestParams);
 			}
@@ -1900,7 +1900,7 @@ implements CommandDiscoverable, FileGenerator, ObjectListProvider
           	}
            	PropList requestParams = new PropList ( "" );
            	requestParams.setUsingObject ( "PropertyName", listBucketsCountProperty );
-           	requestParams.setUsingObject ( "PropertyValue", new Integer(bucketCount) );
+           	requestParams.setUsingObject ( "PropertyValue", Integer.valueOf(bucketCount) );
            	try {
                	processor.processRequest( "SetProperty", requestParams);
            	}
@@ -2200,7 +2200,7 @@ implements CommandDiscoverable, FileGenerator, ObjectListProvider
        		int numObjects = table.getNumberOfRecords();
            	PropList requestParams = new PropList ( "" );
            	requestParams.setUsingObject ( "PropertyName", listObjectsCountProperty );
-           	requestParams.setUsingObject ( "PropertyValue", new Integer(numObjects) );
+           	requestParams.setUsingObject ( "PropertyValue", Integer.valueOf(numObjects) );
            	try {
                	processor.processRequest( "SetProperty", requestParams);
            	}
@@ -2534,7 +2534,7 @@ implements CommandDiscoverable, FileGenerator, ObjectListProvider
        		int numObjects = table.getNumberOfRecords();
            	PropList requestParams = new PropList ( "" );
            	requestParams.setUsingObject ( "PropertyName", listObjectsCountProperty );
-           	requestParams.setUsingObject ( "PropertyValue", new Integer(numObjects) );
+           	requestParams.setUsingObject ( "PropertyValue", Integer.valueOf(numObjects) );
            	try {
                	processor.processRequest( "SetProperty", requestParams);
            	}
@@ -3263,7 +3263,7 @@ implements CommandDiscoverable, FileGenerator, ObjectListProvider
 
     	CommandProcessor processor = getCommandProcessor();
 		CommandStatus status = getCommandStatus();
-    	Boolean clearStatus = new Boolean(true); // Default.
+    	Boolean clearStatus = Boolean.TRUE; // Default.
     	try {
     		Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     		if ( o != null ) {
